--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI - Build and Test
+name: CI/CD - Build, Test, Dockerize
 
 on:
   push:
@@ -7,11 +7,11 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
+  build-and-dockerize:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: Checkout source code
         uses: actions/checkout@v3
 
       - name: Set up JDK 21
@@ -20,11 +20,21 @@ jobs:
           distribution: 'temurin'
           java-version: '21'
 
-      - name: Grant execute permission to Gradle wrapper
+      - name: Grant permission to Gradle wrapper
         run: chmod +x ./gradlew
 
       - name: Build with Gradle
         run: ./gradlew clean build
 
-      - name: Run tests
-        run: ./gradlew test
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: aruntmca/book-service:latest
