--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,8 +23,11 @@ jobs:
       - name: Grant permission to Gradle wrapper
         run: chmod +x ./gradlew
 
-      - name: Build with Gradle
-        run: ./gradlew clean build
+      - name: Run tests with Gradle
+        run: ./gradlew clean test
+
+      - name: Build JAR with Gradle
+        run: ./gradlew bootJar
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
