--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     name: book-service
 
   datasource:
-    url: jdbc:postgresql://localhost:5432/bookdb
+    url: jdbc:postgresql://postgres:5432/bookdb
     username: bookuser
     password: bookpass
     driver-class-name: org.postgresql.Driver
